--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
   "dependencies": {
     "@types/react": "16.x.x",
     "@types/react-native": "0.57.7",
-    "react": "16.6.1",
-    "react-native": "0.57.7",
+    "react": "16.6.3",
+    "react-native": "0.58.6",
     "react-native-navigation": "^2.13.1",
-    "react-native-ui-lib": "^3.20.1",
-    "react-native-view-overflow": "0.0.3",
-    "react-redux": "5.x.x",
-    "redux": "3.x.x"
+    "react-native-ui-lib": "^3.20.1"
   },
   "devDependencies": {
-    "@types/jest": "23.x.x",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "24.3.1",
-    "jest": "24.3.1"
+    "@babel/core": "^7.3.4",
+    "@babel/runtime": "^7.3.4",
+    "babel-jest": "^24.5.0",
+    "jest": "^24.5.0",
+    "metro-react-native-babel-preset": "^0.53.0",
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "react-native",
